# latebloomers

./: LateBlumers_Hackathon_Pitch.pptx  README.md  evaluation.py  final_model.pt  metrics.json  metrics_client.json  metrics_server.json  pyproject.toml  submit_latebloomers.sh
app_pytorch/: client_app.py  server_app.py  task.py  task_new.py
final_model/: data.pkl
final_model/.data/: serialization_id
final_model/data/: 0  1  2  3  4  5  6  7  8  9
