[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-pytorch"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "app_pytorch.server_app:app"
clientapp = "app_pytorch.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-train = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "cluster-cpu" # it will be gpu though, name doesn't matter

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.cluster-cpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2
options.backend.server-resources.num-gpus = 1 # parallel client's, depends on how much memory each client needs. start from 1
